--- a/templates/Home/home.twig
+++ b/templates/Home/home.twig
@@ -1,21 +1,17 @@
 {% extends "base.html.twig" %}
  {% block body %}
     <div class="container">
-        <h2>Panel Użytkownika</h2>
-        <div class= "row">
-            <div class = "col-6">
-            Jesteś zalogowany jako: </br>
-            {{emailGet}}
-            </br>
-            </div>
-        </div>
-        <div>
-            <a href= "{{path('logout')}}">Wyloguj</a>
-        </div>
+        <h2>Strona startowa</h2>
     </div>
-    
+
     <div>
-        <h3>Dodaj post</h3>
-        <a href= "{{path('post_create')}}">Dodaj post</a>
+        <h3>Nie posiadasz konta</h3>
+        <a href= "{{path('register')}}">Zarejestruj się</a>
     </div>
+
+    <div>
+        <h3>Masz konto?</h3>
+        <a href= "{{path('login')}}">Logowanie</a>
+    </div>
+
  {% endblock %}
