--- a/templates/User/login.twig
+++ b/templates/User/login.twig
@@ -4,7 +4,9 @@
 
 {% block body %}
     {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="alert alert-danger">
+            {{ error.messageKey|trans(error.messageData, 'security') }}
+        </div>
     {% endif %}
     <h2>Zaloguj się</h2>
         <form class="px-4 py-3" action="{{ path('login') }}" method="post">
@@ -16,8 +18,6 @@
             <label for="password">Hasło</label>
             <input type="password" id="password" name="_password" class="form-control"/>
 
-            <input type="hidden" name="_target_path" value="/home"/>
-
             <button type="submit" class="btn btn-secondary">Zaloguj</button>
             </div>
             <div>
@@ -26,8 +26,8 @@
                 Zapamiętaj mnie
             </label>
             </div>
-
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
         </form>
         <h3>Nie posiadasz konta</h3>
-            <a href= "{{path('signup')}}">Zarejestruj się</a>
+            <a href= "{{path('register')}}">Zarejestruj się</a>
 {% endblock %}
